[tool.poetry]
name = "habit-university"
version = "0.1.0"
description = ""
authors = ["Cinnaronda <sharonda.d27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
python-dotenv = "^0.17.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
